overflow fixing.

--- a/src/styles/aboutlayout.css
+++ b/src/styles/aboutlayout.css
@@ -7,6 +7,7 @@
     padding: 2rem 1rem;
     background-color: #071022;
     color: wheat;
+    overflow-x: hidden;
 }
 
 .first{
